--- a/TDD_2/TDD_2/TDD_2.csproj
+++ b/TDD_2/TDD_2/TDD_2.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TDD_2.Tests\TDD_2.Tests.csproj" />
+  </ItemGroup>
+
 </Project>
