--- a/TDD_2/TDD_2.Tests/TDD_2.Tests.csproj
+++ b/TDD_2/TDD_2.Tests/TDD_2.Tests.csproj
@@ -11,11 +11,16 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="NUnit" Version="3.14.0" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
 	
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TDD_2\TDD_2.csproj" />
   </ItemGroup>
 
   <ItemGroup>
